# BUPT-Computer-Networking-SMTP-Proxy

./: .env.example  .gitignore  README.md  main.py  pdm.toml  pyproject.toml
app/: __init__.py
app/config/: __init__.py  config.py
app/exceptions/: smtp.py
app/handler/: __init__.py  handler.py
app/logging/: __init__.py  logging.py
app/models/: __init__.py  models.py
app/parser/: __init__.py  basic_parser.py  parser.py
app/proxy/: __init__.py  basic_proxy.py  http_proxy.py  proxy.py  smtp_proxy.py
app/smtp_forwarder/: __init__.py  smtp_forwarder.py  success.html
